[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
log = "0.4"
spin = "0.9"
virtio-drivers = { version = "0.9.0" }
async-task = { version = "4.7.1", default-features = false }
lwext4_rust = { path = "../vendor/lwext4_rust", default-features = false}
bitmap-allocator = { path = "../vendor/bitmap-allocator" }
paste = "1.0"
hal = {path = "./hal" }
async-trait = "0.1.88"

[features]
smp = []


[profile.release]
debug = true
